--- a/first.html
+++ b/first.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>kuch change</h1>
+    <h1>dimag kharab</h1>
 <h2>jaldi kaam krke sojao
 
 </h2>
